--- a/works/futurelab.html
+++ b/works/futurelab.html
@@ -19,17 +19,17 @@
     <a href="index.html" target="_self" id="tomain"><img src="/sakemin_logo_alpha.png" alt="sakemin" id="logo"/></a>
     <ul class="tab-wrapper">
       <li class="tab">
-        <a href="about.html" target="_self" id="about">
+        <a href="/about.html" target="_self" id="about">
           about
           </a>
       </li>
       <li class="tab">
-        <a href="works.html" target="_self" id="works">
+        <a href="/works.html" target="_self" id="works">
           works
           </a>
       </li>
       <li class="tab">
-        <a href="contact.html" target="_self" id="contact">
+        <a href="/contact.html" target="_self" id="contact">
           contact
           </a>
       </li>
