--- a/works/object.html
+++ b/works/object.html
@@ -52,35 +52,35 @@
     <h1>(사물이 거울에 보이는 것보다 가까이 있음.)</h1>
     <h2>2017</h2>
     <h2>Virtual Reality</h2>
-    <h2>Unity, CINEMA 4D, Logic Pro X, Max 7</h2>
-    <h2>directed by <a href="https://instagram.com/at_fence">Jinkyeong Song</a> <br> co-directed by <a href="http://jtoda.one">Jaewon Choi</a>, Jongmin Jung, <a href="https://www.instagram.com/minjisan/">Jisan Min</a>, <a href="https://alexxxarchive.tumblr.com/">Yerin Choi</a></h2>
-    <h2>3D modeling / composition by <a href="https://alexxxarchive.tumblr.com/">Yerin Choi</a> <br> 2D composition by <a href="https://instagram.com/at_fence">Jinkyeong Song</a>, Jongmin Jung <br> video composition by <a href="https://www.instagram.com/minjisan/">Jisan Min</a> and Jongmin Jung <br> developed by Jongmin Jung <br> music by <a href="http://jtoda.one">Jaewon Choi</a></h2>
+    <h3>Unity, CINEMA 4D, Logic Pro X, Max 7</h3>
+    <h3>directed by <a href="https://instagram.com/at_fence">Jinkyeong Song</a> <br> co-directed by <a href="http://jtoda.one">Jaewon Choi</a>, Jongmin Jung, <a href="https://www.instagram.com/minjisan/">Jisan Min</a>, <a href="https://alexxxarchive.tumblr.com/">Yerin Choi</a></h3>
+    <h3>3D modeling / composition by <a href="https://alexxxarchive.tumblr.com/">Yerin Choi</a> <br> 2D composition by <a href="https://instagram.com/at_fence">Jinkyeong Song</a>, Jongmin Jung <br> video composition by <a href="https://www.instagram.com/minjisan/">Jisan Min</a> and Jongmin Jung <br> developed by Jongmin Jung <br> music by <a href="http://jtoda.one">Jaewon Choi</a></h3>
       <img src="object_5.jpg" style="width:100%;"/><br/><br/>
       <img src="object_3.jpg" style="width:100%;"/><br/><br/>
       <img src="object_4.jpg" style="width:100%;"/><br/><br/>
       <img src="object_1.jpg" style="width:100%;"/><br/><br/>
       <img src="object_2.jpg" style="width:100%;"/><br/><br/>
     <div lang="ko" id="description"><br/>
-      &nbsp;&nbsp;개인에 대한 사회의 폭력은 어디서부터 시작되는가.&nbsp;&nbsp;
+      &nbsp;&nbsp;개인에 대한 사회의 폭력은 어디서부터 시작되는가.<br/><br/>
 
-감상자는 VR을 착용한다. VR 속 세상은 프로젝터를 통해 밖에 투사되지만, 외부로 나가는 영상은 VR 내부의 모습과 다르다. 그러나 제삼자는 알 수 없다. VR 착용자는 VR을 벗고, 외부 프로젝터의 화면이 내부와 다름을 확인하고, 제삼자에게 말로 설명해야한다. 이 과정이 이 작품의 기본적인 메커니즘이다.&nbsp;&nbsp;
+감상자는 VR을 착용한다. VR 속 세상은 프로젝터를 통해 밖에 투사되지만, 외부로 나가는 영상은 VR 내부의 모습과 다르다. 그러나 제삼자는 알 수 없다. VR 착용자는 VR을 벗고, 외부 프로젝터의 화면이 내부와 다름을 확인하고, 제삼자에게 말로 설명해야한다. 이 과정이 이 작품의 기본적인 메커니즘이다.<br/><br/>
 
-타인의 삶을 직접적으로 경험하는 것은 불가능하다. 오직 간접적인 경험만이 가능하다. 결국 타인은 개인의 삶을 완전히 알 수 없다. 그 중 가장 직접적 경험에 가까운 기술이 VR이다. VR은 근 몇년간 계속 발전해 오고 있으며, 우리는 이 기술로 롤러코스터도 타고, 판타지 월드도 가고, 섹스도 할 수 있다.&nbsp;&nbsp;
+타인의 삶을 직접적으로 경험하는 것은 불가능하다. 오직 간접적인 경험만이 가능하다. 결국 타인은 개인의 삶을 완전히 알 수 없다. 그 중 가장 직접적 경험에 가까운 기술이 VR이다. VR은 근 몇년간 계속 발전해 오고 있으며, 우리는 이 기술로 롤러코스터도 타고, 판타지 월드도 가고, 섹스도 할 수 있다.<br/><br/>
 
-VR 산업이 바라보는 방향은 사회가 이상으로 여기는 방향과 같다고 생각한다. 우리 사회는 어느 방향을 바라보고 있는가. 아니 어느 곳을 등지고 있는가. 그 그림자 안에도 누군가는 살고 있고, 계속 소리치고 있다.&nbsp;&nbsp;
+VR 산업이 바라보는 방향은 사회가 이상으로 여기는 방향과 같다고 생각한다. 우리 사회는 어느 방향을 바라보고 있는가. 아니 어느 곳을 등지고 있는가. 그 그림자 안에도 누군가는 살고 있고, 계속 소리치고 있다.<br/><br/>
 
-여러가지 ‘비정상’과 같은 이름을 달아 놓음으로 자신들의 삶과 거리를 두려고 부단한 노력을 하지만, 존재는 지워질 수 없다. 우리는 생각보다 가까이에 존재하고 있다.&nbsp;&nbsp;
+여러가지 ‘비정상’과 같은 이름을 달아 놓음으로 자신들의 삶과 거리를 두려고 부단한 노력을 하지만, 존재는 지워질 수 없다. 우리는 생각보다 가까이에 존재하고 있다.<br/><br/>
     </div>
     <div id="description"><br/>
-      &nbsp;&nbsp;Where does the systematic abuse towards individuals start?&nbsp;&nbsp;
+      &nbsp;&nbsp;Where does the systematic abuse towards individuals start?<br/><br/>
 
-The audience equips HMD. The VR scene is displayed on the projector outside. But in reality, the projection is different to the inner-VR visual. Still, the spectators outside cannot notice that. The audience has to acknowledge and explain the difference of images between outer-VR and inner-VR. This procedure is the basic mechanism of this work.&nbsp;&nbsp;
+The audience equips HMD. The VR scene is displayed on the projector outside. But in reality, the projection is different to the inner-VR visual. Still, the spectators outside cannot notice that. The audience has to acknowledge and explain the difference of images between outer-VR and inner-VR. This procedure is the basic mechanism of this work.<br/><br/>
 
-It is impossible to directly experience others’ lives. You can only perceive them second-handed. As a result, nobody can truly understand another’s life. VR is the most undeviating way to experience other’s life. VR has been advancing throughout recent years. In VR world, we can ride a rollercoaster, visit fantasy worlds, and have a sex.&nbsp;&nbsp;
+It is impossible to directly experience others’ lives. You can only perceive them second-handed. As a result, nobody can truly understand another’s life. VR is the most undeviating way to experience other’s life. VR has been advancing throughout recent years. In VR world, we can ride a rollercoaster, visit fantasy worlds, and have a sex.<br/><br/>
 
-The general course VR industry is walking is akin to the ideal of the society. What direction is our society looking towards? More importantly, what direction is the society abandoning? There are people living inside the shadows, and they are crying out loud.&nbsp;&nbsp;
+The general course VR industry is walking is akin to the ideal of the society. What direction is our society looking towards? More importantly, what direction is the society abandoning? There are people living inside the shadows, and they are crying out loud.<br/><br/>
 
-People struggle to keep distance between themselves and the minority by calling them ‘abnormal,’ but the subsistence cannot be erased. We are ever closer than you think.&nbsp;&nbsp;
+People struggle to keep distance between themselves and the minority by calling them ‘abnormal,’ but the subsistence cannot be erased. We are ever closer than you think.<br/><br/>
     </div>
   </div>
 
