--- a/innerpeace/index.html
+++ b/innerpeace/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
 
+  <title>Inner Peace</title>
+  <link rel="icon" href="/favicon.png" sizes="96x96">
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
