--- a/innerpeace/index.html
+++ b/innerpeace/index.html
@@ -108,7 +108,7 @@
       분주함
     </div>
     <div class="feelings" id="w2-4" onclick="feelChoose(5)">
-      외로움
+      무기력
     </div>
     <div class="feelings" id="w2-5" onclick="feelChoose(6)">
       분노
@@ -213,6 +213,276 @@
     </div>
     <div class="words" id="w3-32">
       눈을 감고 힘든 우리 마음을 한번만 더 안아주자.
+
+    </div>
+    <div class="words" id="w4-1">
+      너무 일이 많아서 어디서부터 시작할지 모를 때.
+      </div>
+      <div class="words" id="w4-2">
+      일단 바른 자세로 허리를 꼿꼿이 펴보자.
+    </div>
+    <div class="words" id="w4-3">
+      그리고 숨을 깊게 들이쉬고,
+    </div>
+    <div class="words" id="w4-4">
+      천천히 내쉬고,
+    </div>
+    <div class="words" id="w4-5">
+      다시 한번 깊게 들이쉬고,
+    </div>
+    <div class="words" id="w4-6">
+      천천히 내쉬고
+    </div>
+    <div class="words" id="w4-7">
+      분주한 마음이 느껴지지?
+    </div>
+    <div class="words" id="w4-8">
+      해야 할 일들이 머릿속을 떠나질 않지?
+    </div>
+    <div class="words" id="w4-9">
+      하지만 어떤 생각이 나든 호흡에 계속 집중하자.
+    </div>
+    <div class="words" id="w4-10">
+      유리잔 안에 차있는 물 위 부유물들을 상상해봐.
+    </div>
+    <div class="words" id="w4-11">
+      아주 어지럽게 둥둥 떠 있어서 물이 뿌옇다.
+    </div>
+    <div class="words" id="w4-12">
+      마치 네 머릿속과 같이.
+    </div>
+    <div class="words" id="w4-13">
+      계속 너가 깊은 호흡을 할 때 마다,
+    </div>
+    <div class="words" id="w4-14">
+      부유물들은 가라앉아.
+    </div>
+    <div class="words" id="w4-15">
+      흙먼지들이 바닥으로 천천히 침전해.
+    </div>
+    <div class="words" id="w4-16">
+      뿌옇던 물은 점점 맑아지기 시작해.
+    </div>
+
+    <div class="words" id="w4-17">
+      그리고 지금, 네 머릿속엔 어떤 생각이 떠오르니?
+    </div>
+
+    <div class="words" id="w4-18">
+      진짜 바쁘고 정신 없다고 생각했는데, 지금 내가 정말로 해야 할 일은 무엇이지?
+    </div>
+    <div class="words" id="w4-19">
+      가장 중요한 일은 무엇이지?
+    </div>
+
+    <div class="words" id="w4-20">
+      유리잔 바닥에 가라앉지 않은 커다란 무언가가 수면에 떠 있다면,
+    </div>
+    <div class="words" id="w4-21">
+      그것이 무엇인지, 있는 그대로 바라봐봐.
+    </div>
+
+    <div class="words" id="w4-22">
+      눈 앞에 닥친 많은 일들에 허둥지둥 대느라,
+    </div>
+    <div class="words" id="w4-23">
+      정말로 중요한 일,
+    </div>
+    <div class="words" id="w4-24">
+      정말로 해야 할 일을 계속 미루고 있었는지도 몰라.
+    </div>
+
+    <div class="words" id="w4-25">
+      그 일에 부담감, 두려움을 느끼지 말고,
+    </div>
+    <div class="words" id="w4-26">
+      잊고 있었던 자신을 책망하지도 말고,
+    </div>
+    <div class="words" id="w4-27">
+      그것을 있는 그대로 바라보자.
+    </div>
+
+    <div class="words" id="w4-28">
+      그러면 그것마저도 물 아래로 가라앉는 것을 볼 수 있을거야.
+    </div>
+    <div class="words" id="w4-29">
+      눈을 감고 맑은 물을 생각해보자.
+    </div>
+
+    <div class="words" id="w4-30">
+      그리고 지금 해야 할 일을 할 준비가 된 너 자신의 에너지를 느껴 봐.
+    </div>
+
+    <div class="words" id="w4-31">
+      일들에 휩쓸려가지 않고,
+    </div>
+    <div class="words" id="w4-32">
+      생각들에 휩쓸려가지 않고,
+    </div>
+    <div class="words" id="w4-33">
+      너가 이 순간의 주인이 되는거야.
+    </div>
+
+
+    <div class="words" id="w5-1">
+      아무것도 안하기
+    </div>
+    <div class="words" id="w5-2">
+      우린 아무것도 하지 않는 걸 연습해볼거야.
+    </div>
+    <div class="words" id="w5-3">
+      그냥 지금 내가 이곳에 있다는 것을 의식해보자.
+    </div>
+    <div class="words" id="w5-4">
+      그리고 숨을 한번 깊이 들이마시고,
+    </div>
+    <div class="words" id="w5-5">
+      천천히 내쉬어 봐.
+    </div>
+    <div class="words" id="w5-6">
+      다시 한번 숨을 한번 깊이 들이마시고,
+    </div>
+    <div class="words" id="w5-7">
+      천천히 내쉬어 봐.
+    </div>
+
+    <div class="words" id="w5-8">
+      그럼 이제부터는 그냥 아무것도 하지 않는거야.
+    </div>
+    <div class="words" id="w5-9">
+      숨을 깊게 쉬려는 노력도, 무언가에 집중을 하려는 노력도 하지 않는거야.
+    </div>
+    <div class="words" id="w5-10">
+      그냥 있는 그대로 있는거야.
+    </div>
+
+    <div class="words" id="w5-11">
+      그냥 존재하는거야.
+    </div>
+
+    <div class="words" id="w5-12">
+      마치 너가 따뜻한 물 위, 튜브 위에 누워있다고 생각해봐.
+    </div>
+    <div class="words" id="w5-13">
+      수영을 못해도 괜찮아.
+    </div>
+    <div class="words" id="w5-14">
+      튜브가 네 몸을 온전히 떠받들고 있어.
+    </div>
+    <div class="words" id="w5-15">
+      발에는 따뜻한 물의 감촉이 느껴지는 거야.
+    </div>
+    <div class="words" id="w5-16">
+      넌 그냥 아무것도 안하고 누워있는 거야.
+    </div>
+    <div class="words" id="w5-17">
+      물살에, 물결에 몸을 맡기고.
+    </div>
+    <div class="words" id="w5-18">
+      편안하게 누워있는거야.
+    </div>
+
+    <div class="words" id="w5-19">
+      지금 이순간 그냥 이 곳에 있는거야.
+    </div>
+
+    <div class="words" id="w5-20">
+      그게 전부야.
+    </div>
+    <div class="words" id="w5-21">
+      아무것도 하지 않는거야.
+    </div>
+
+    <div class="words" id="w5-22">
+      너 스스로에게 아무것도 하지 않을 자유를 주자.
+    </div>
+    <div class="words" id="w5-23">
+      아주 편안하게 몸과 마음을 놓는거야.
+    </div>
+    <div class="words" id="w5-24">
+      눈을 감고 몸과 마음을 편안히 놓아 보자.
+    </div>
+
+    <div class="words" id="w6-1">
+      화가 날 때 가장 먼저 해야할 것은,
+    </div>
+    <div class="words" id="w6-2">
+      그 상황에서 한 걸음 물러나는 거야.
+    </div>
+    <div class="words" id="w6-3">
+      네가 어떤 기분을 느끼고 있는지 제대로 인지하기 위해서야.
+    </div>
+    <div class="words" id="w6-4">
+      우선, 너가 화가 나고 있다는 것을 알아차리는 거야.
+    </div>
+    <div class="words" id="w6-5">
+      심장이 빨라지고,
+    </div>
+    <div class="words" id="w6-6">
+      머리에 열이 오르고,
+    </div>
+    <div class="words" id="w6-7">
+      목소리가 높아져.
+    </div>
+    <div class="words" id="w6-8">
+      몸이 부들부들 떨리거나,
+    </div>
+    <div class="words" id="w6-9">
+      얼굴 표정이 일그러져.
+    </div>
+    <div class="words" id="w6-10">
+      네 몸은 그 화를 어딘가로 쏟아낼 준비를 하고 있는 거야.
+    </div>
+    <div class="words" id="w6-11">
+      컴퓨터 게임을 할 때 종종 보는 에너지를 충전하는 그 긴 막대를 상상해 봐.
+    </div>
+    <div class="words" id="w6-12">
+      지금 네 몸도 화와 분노의 에너지로 쭈욱 차오르고 있어.
+    </div>
+    <div class="words" id="w6-13">
+      우선 네 머릿속에서 그 화에 기름을 붓는 다른 생각들이 생겨나기 전에,
+    </div>
+    <div class="words" id="w6-14">
+      잠깐 멈추자.
+    </div>
+
+    <div class="words" id="w6-15">
+      마치 영화의 정지화면 처럼,
+    </div>
+    <div class="words" id="w6-16">
+      지금 이 순간 잠시 멈추고,
+    </div>
+    <div class="words" id="w6-17">
+      너의 호흡을 느끼는거야.
+    </div>
+
+    <div class="words" id="w6-18">
+      들숨의 감각과, 날숨의 감각을 있는 그대로.
+    </div>
+    <div class="words" id="w6-19">
+      다시 들숨의 감각과 날숨의 감각을.
+    </div>
+    <div class="words" id="w6-20">
+      다시 천천히, 그리고 깊게 숨을 들이마쉬고,
+    </div>
+    <div class="words" id="w6-21">
+      천천히 내쉬며 네 몸의 감각을 느껴봐.
+    </div>
+
+    <div class="words" id="w6-22">
+      이렇게 세번 깊은 호흡을 갖으면서 넌 분노와 반응 사이에 거리를 둘 수 있었어.
+    </div>
+    <div class="words" id="w6-23">
+      화가 시키는대로 행동한 것이 아니라, 그 화를 오히려 더 잘 들여다 볼 수 있게 된거야.
+    </div>
+    <div class="words" id="w6-24">
+      이건 화를 내지 않거나 억누르는게 아냐.
+    </div>
+    <div class="words" id="w6-25">
+      화가 났을 때, 더 현명하게 화를 내는 방법을 배운거야.
+    </div>
+    <div class="words" id="w6-26">
+      그리고 그 화와 잠시 같이 공존하는 방법을 배운거야.
     </div>
   </div>
 </body>
