--- a/works.html
+++ b/works.html
@@ -57,24 +57,21 @@
       <div class="text">Inner Peace<br/>2017</div>
     </div>
   </a>
-</div>
-    <div class="work-thumbnail">
+</div><div class="work-thumbnail">
     <img src="/works/lightmaru_1.jpg" alt="Lightmaru" />
     <a href="/works/lightmaru.html" target="_self">
       <div class="overlay">
         <div class="text">Lightmaru<br/>(빛마루)<br/>2017</div>
       </div>
     </a>
-  </div>
-    <div class="work-thumbnail">
+  </div><div class="work-thumbnail">
     <img src="/works/object_1.jpg" alt="Objects in mirror are closer than they appear." />
     <a href="/works/object.html" target="_self">
       <div class="overlay">
         <div class="text">Objects in mirror are closer than they appear.<br/>2017</div>
       </div>
     </a>
-  </div>
-    <div class="work-thumbnail">
+  </div><div class="work-thumbnail">
       <img src="/works/seeyouagain_thumbnail.jpg" alt="See You Again" />
       <a href="/works/seeyouagain.html" target="_self">
         <div class="overlay">
